--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_BASE_URL=https://twitch-back-885f64c14cf8.herokuapp.com/
+NEXT_PUBLIC_API_BASE_URL=https://twitch-back-885f64c14cf8.herokuapp.com
