ドメイン設定の見直し

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_PARENT_DOMAIN=twitch-back-885f64c14cf8.herokuapp.com
+NEXT_PUBLIC_PARENT_DOMAIN=twitch-back-885f64c14cf8
 NEXT_PUBLIC_API_BASE_URL=https://twitch-back-885f64c14cf8.herokuapp.com
