フォローリストの取得

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,5 @@
+NEXT_PUBLIC_TWITCH_CLIENT_ID=aticik4cbqq7olbvdhw0lvd333bjx8
+NEXT_PUBLIC_TWITCH_CLIENT_SECRET=2jzffj8ej03j5y8h480qi2d9ac1cw0
+TWITCH_ACCESS_TOKEN=yiweg48irmwryoyp7kahbmgvtwae9j
 NEXT_PUBLIC_PARENT_DOMAIN=front-pink-nine.vercel.app
 NEXT_PUBLIC_API_BASE_URL=https://twitch-back-885f64c14cf8.herokuapp.com
